--- a/prenotazione/prenotazione.csproj
+++ b/prenotazione/prenotazione.csproj
@@ -1723,6 +1723,7 @@
     <Compile Include="accesso.aspx.designer.cs">
       <DependentUpon>accesso.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="registrazione.aspx.cs">
       <DependentUpon>registrazione.aspx</DependentUpon>
