Prove di push e pull

--- a/prenotazione/prenotazione.csproj
+++ b/prenotazione/prenotazione.csproj
@@ -1747,6 +1747,7 @@
     <Compile Include="homepage.aspx.designer.cs">
       <DependentUpon>homepage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fontawesome\less\brands.less" />
