--- a/prenotazione/prenotazione.csproj
+++ b/prenotazione/prenotazione.csproj
@@ -1711,6 +1711,7 @@
     <Content Include="fontawesome\webfonts\fa-brands-400.svg" />
     <Content Include="fontawesome\webfonts\fa-regular-400.svg" />
     <Content Include="fontawesome\webfonts\fa-solid-900.svg" />
+    <Content Include="prenotazioni.aspx" />
     <Content Include="registrazione.aspx" />
     <Content Include="Web.config" />
     <Content Include="homepage.aspx" />
@@ -1725,6 +1726,13 @@
     </Compile>
     <Compile Include="DAL.cs" />
     <Compile Include="Person.cs" />
+    <Compile Include="prenotazioni.aspx.cs">
+      <DependentUpon>prenotazioni.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="prenotazioni.aspx.designer.cs">
+      <DependentUpon>prenotazioni.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="registrazione.aspx.cs">
       <DependentUpon>registrazione.aspx</DependentUpon>
