Aggiunto nome ristorante in navigazione

--- a/prenotazione/prenotazione.csproj
+++ b/prenotazione/prenotazione.csproj
@@ -1711,6 +1711,8 @@
     <Content Include="fontawesome\webfonts\fa-brands-400.svg" />
     <Content Include="fontawesome\webfonts\fa-regular-400.svg" />
     <Content Include="fontawesome\webfonts\fa-solid-900.svg" />
+    <Content Include="img\greece-culture-food-wine.jpg" />
+    <Content Include="img\symposion.png" />
     <Content Include="prenotazioni.aspx" />
     <Content Include="registrazione.aspx" />
     <Content Include="Web.config" />
@@ -1822,9 +1824,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="imgs\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
