inserti verifiche disponibilità prima di prenotare

--- a/prenotazione/Web.config
+++ b/prenotazione/Web.config
@@ -20,7 +20,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="MainDB" connectionString="Data Source=LAPTOP-GIANNI\SQLEXPRESS;Initial Catalog=Ristorante;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="MainDB" connectionString="Data Source=LAPTOP-GIANNI\SQLEXPRESS;Initial Catalog=ristorante;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
 </configuration>
